<resources>
    <string name="app_name">The Movie Booking App</string>
    <string name="logo_cinema_txt">cinema</string>
    <string name="logo_c_letter">C</string>
    <string name="lbl_verify_your_phone_number_login_screen">Verify Your Phone Number</string>
    <string name="lbl_verify_6_digit_txt_login_screen">We will send 6-digit sms code\nto verify your phone number</string>
    <string name="by_clicking_login_screen"><![CDATA[By clicking, I accept the Terms & Conditions & Privacy Policy]]></string>
    <string name="country_code_login_screen">Country Code</string>
    <string name="lbl_mobile_number_login_screen">Mobile Number</string>
    <string name="lbl_or">Or</string>
    <string name="btn_continue_with_google_login_screen">Continue With Google</string>
    <string name="lbl_enter_otp_code_otp_screen">Enter OTP Code</string>
    <string name="lbl_otp_details_otp_screen">Please enter 6-digit OTP code\nthat sent to your phone number.</string>
    <string name="lbl_we_ve_sent_otp_code_otp_screen">We\'ve sent OTP Code</string>
    <string name="lbl_confirm_otp_otp_screen">Confirm OTP</string>
    <string name="lbl_resend_code_otp_screen">\u0020Resend Code</string>
    <string name="lbl_don_t_receive_otp_otp_screen">Don’t receive OTP?</string>
    <string name="lbl_pick_region_location_screen">Pick Region</string>
    <string name="lbl_search_your_location_location_screen">Search Your Location</string>
    <string name="lbl_search_app_bar_icon">Search</string>
    <string name="lbl_notifications_app_bar_icon">Notifications</string>
    <string name="lbl_scan_app_bar_icon">Scan</string>
    <string name="lbl_movies_bottom_icon">Movies</string>
    <string name="lbl_cinema_bottom_icon">Cinema</string>
    <string name="lbl_ticket_bottom_icon">Ticket</string>
    <string name="lbl_profile_bottom_icon">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lbl_movie_description">In the 1970s, young Gru tries to join a group of supervillains called the Vicious 6 after they oust their leader -- the legendary fighter Wild Knuckles. When the interview turns disastrous, Gru and his Minions go on the run with the Vicious 6 hot on their tails. Luckily, he finds an unlikely source for guidance -- Wild Knuckles himself -- and soon discovers that even bad guys need a little help from their friends.</string>
    <string name="lbl_cast_movie_details">Cast</string>
    <string name="lbl_story_line_movie_details">Story Line</string>
    <string name="lbl_play_button_fab">play button</string>
    <string name="lbl_btn_booking">Booking</string>
    <string name="lbl_notify_as_soon_as_movies_details">Get notify as soon as movie\nbooking opens up in your city!</string>
    <string name="lbl_set_notification_txt">Set Notification</string>
    <string name="lbl_2d">2D</string>
    <string name="lbl_3d">3D</string>
    <string name="lbl_3d_imax">3D IMAX</string>
    <string name="lbl_3d_dbox">3D DBOX</string>
    <string name="lbl_available">Available</string>
    <string name="lbl_filling_fast">Filling Fast</string>
    <string name="lbl_almost_full">Almost Full</string>
    <string name="lbl_censor_rating">Censor Rating</string>
    <string name="lbl_release_date_details">Release Date</string>
    <string name="lbl_duration_details">Duration</string>
    <string name="lbl_see_details"><u>See Details</u></string>
    <string name="lbl_parking">Parking</string>
    <string name="lbl_online_food">Online Food</string>
    <string name="lbl_wheel_chair">Wheel Chair</string>
    <string name="lbl_long_press_on_show_timing">Long press on show timing to see seat class!</string>
    <string name="lbl_your_selection">Your Selection</string>
    <string name="lbl_taken">Taken</string>
    <string name="lbl_grab_a_bite">Grab a bite!</string>
    <string name="lbl_skip">SKIP</string>
    <string name="lbl_checkout">Checkout</string>
    <string name="lbl_food_and_beverage">Food and Beverage</string>
    <string name="lbl_convenience_fee">Convenience Fee</string>
    <string name="lbl_total">Total</string>
    <string name="lbl_m_ticket">M-Ticket(</string>
    <string name="lbl_closed_bracket">)</string>
    <string name="lbl_ticket_confirmation">Ticket Confirmation</string>
    <string name="lbl_tpin">TPIN :</string>
    <string name="lbl_ticket_cancellation_policy">Ticket Cancellation Policy</string>
    <string name="lbl_100_refund_on_f_amp_b"><![CDATA[100% Refund on F&B]]></string>
    <string name="lbl_up_to_75_refund_for_tickets">Up to 75% Refund for Tickets</string>
    <string name="lbl_75_refund_until_2_hours_before_show_nstart_time">-75% refund until 2 hours before show\nstart time</string>
    <string name="lbl_50_refund_between_2_hours_and_20_nminutes_before_show_start_time">-50% refund between 2 hours and 20\nminutes before show start time</string>
    <string name="lbl_1_refund_not_available_for_convenience_fees_vouchers_gift_cards_taxes_etc">1. Refund not available for Convenience\nfees,Vouchers, Gift Cards, Taxes etc.</string>
    <string name="lbl_2_no_cancellation_within_20minute_of_show_start_time">2. No cancellation within 20minute of show\nstart time.</string>
    <string name="lbl_h">H</string>
    <string name="lbl_g">G</string>
    <string name="lbl_f">F</string>
    <string name="lbl_e">E</string>
    <string name="lbl_d">D</string>
    <string name="lbl_c">C</string>
    <string name="lbl_b">B</string>
    <string name="lbl_a">A</string>

    <string name="lbl_normal_seat">Normal</string>
    <string name="lbl_execitive_seat">Executive</string>
    <string name="lbl_premium_seat">Premium</string>
    <string name="lbl_purchase_history">Purchase History</string>
    <string name="lbl_offer">Offer</string>
    <string name="lbl_gift_card">Gift Card</string>
    <string name="lbl_location">Location</string>
    <string name="lbl_payment">Payment</string>
    <string name="lbl_help_and_support">Help and Support</string>
    <string name="lbl_logout">Logout</string>
    <string name="lbl_enter_your_name">Enter your name</string>
    <string name="lbl_choose_your_payment_type">Choose your payment type</string>
    <string name="lbl_your_ticket">Your Ticket</string>
    <string name="lbl_refund_amount">Refund Amount</string>
    <string name="lbl_cinema_details">Cinema Details</string>
    <string name="lbl_facilities">Facilities</string>
    <string name="lbl_safety">Safety</string>
    <string name="lbl_ticket_cancellation">Ticket Cancellation</string>
    <string name="hint_search_the_cinema">search the cinema</string>
    <string name="lbl_format">Format</string>
    <string name="lbl_price_range">Price Range</string>
    <string name="lbl_3500ks">3500Ks</string>
    <string name="lbl_29500ks">29500Ks</string>
    <string name="lbl_show_times">Show Times</string>
    <string name="lbl_8am">8am</string>
    <string name="lbl_12pm">12pm</string>
    <string name="lbl_genres">Genres</string>
    <string name="lbl_month">Month</string>
    <string name="lbl_search_the_movies">Search the movies</string>
    <string name="cities_lbl">Cities</string>
    <string name="normal_4500ks_lbl">Normal (4500ks)</string>
    <string name="done_lbl">DONE</string>
</resources>