<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvCinemaNameMoviesCinema"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_15dp"
        android:layout_marginEnd="@dimen/margin_large"
        android:layout_alignParentStart="true"
        android:text="JCGV : Junction City"
        android:textAppearance="@style/TextInterWhiteSemiBold16sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_15dp"
        android:layout_marginEnd="@dimen/margin_large"
        android:fontFamily="@font/inter_medium"
        android:text="@string/lbl_see_details"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/text_regular" />

    <LinearLayout
        android:id="@+id/llCinemaStuffs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_large"
        android:layout_below="@+id/tvCinemaNameMoviesCinema"
        android:layout_marginTop="@dimen/margin_21dp"
        android:layout_marginBottom="@dimen/margin_10dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/width_stuff_icon"
            android:layout_height="@dimen/width_stuff_icon"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/icon_parking" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_card_medium"
            android:fontFamily="@font/inter_medium"
            android:text="@string/lbl_parking"
            android:textColor="@color/colorCinemaStuff"
            android:textSize="@dimen/text_regular" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/width_stuff_icon"
            android:layout_height="@dimen/width_stuff_icon"
            android:layout_marginStart="@dimen/margin_17dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/icon_food" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_card_medium"
            android:fontFamily="@font/inter_medium"
            android:text="@string/lbl_online_food"
            android:textColor="@color/colorCinemaStuff"
            android:textSize="@dimen/text_regular" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/width_stuff_icon"
            android:layout_height="@dimen/width_stuff_icon"
            android:layout_marginStart="@dimen/margin_17dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/icon_wheel_chair" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_card_medium"
            android:fontFamily="@font/inter_medium"
            android:text="@string/lbl_wheel_chair"
            android:textColor="@color/colorCinemaStuff"
            android:textSize="@dimen/text_regular" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCinemaTimesMoviesCinema"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/llCinemaStuffs"
        android:padding="@dimen/margin_10dp"
        android:visibility="gone"
        tools:itemCount="4"
        tools:listitem="@layout/view_holder_movies_cinema_cinema_times_list" />

    <LinearLayout
        android:id="@+id/llLongPressMoviesCinema"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rvCinemaTimesMoviesCinema"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_15dp"
        android:layout_marginEnd="@dimen/margin_large"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/margin_30dp"
        android:visibility="gone">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/width_stuff_icon"
            android:layout_height="@dimen/width_stuff_icon"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/ic_baseline_info_grey_16dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_card_medium"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/lbl_long_press_on_show_timing"
            android:textColor="@color/colorCinemaStuff"
            android:textSize="@dimen/text_regular" />

    </LinearLayout>

</RelativeLayout>